correction of href and change content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
         <div class="button">
             <img class="button-icon" src="./image/next.svg">
-            <a class="button-c" href="to-mail:contact@fortressboxes.tech">Book a meet</a>
+            <a class="button-c" href="mailto:contact@fortressboxes.tech">Get in Touch</a>
         </div>
     </nav>
     <!-- navbar end -->
@@ -106,6 +106,9 @@
         <button class="carousel__button carousel__button--right"><img class="raw" src="./image/next.svg"></button>
     </div>
     <!-- Carousel End -->
+    <div class="">
+
+    </div>
     <script type="text/javascript" src="./script/carouselle.js"></script>
     <script type="text/javascript" src="./script/menu.js"></script> 
 </body>
