--- a/index.html
+++ b/index.html
@@ -49,29 +49,26 @@
     
     <!-- Carousel Start -->
     <div class="carousel">
-        <h1 style="text-align: center;margin-bottom: 10px;color: white;">Our Services</h1>
         <div class="carousel__inner">
             <div class="carousel__item active" >
                 <div class="pic-1">
                     <img class="pic-1-content" src="./image/blockchain.svg" alt="FortressBoxes blockchain audit">
                 </div>
                 <div class="content-1">
-                    <h2 class="title">Blockchain audit</h2>
-                    <p class="text">Are you preparing to launch your Solidity smart contract but want to thoroughly review it before deployment?<br>
-                    At Fortress Boxes, we are dedicated to ensuring the security of decentralized projects.<br>
-                    With the increasing frequency of security breaches, it's crucial to protect your project and community.<br>
-                    Our team of experienced developers and researchers will provide a comprehensive audit report, complete with identified errors and recommended solutions.<br><br>
-                    <b class="end" style="font-size: 17px;">Trust us to safeguard your project - contact us today to schedule an audit.</b></p>
+                    <h2 class="title">Smart Contract Security: Our Top Priority</h2>
+                    <p class="text">
+                        Smart contracts have become increasingly popular due to their many benefits, but they also come with security risks that need to be addressed. <br>
+                        At FortressBoxes, we prioritize the security of your smart contract by implementing various measures to prevent vulnerabilities and attacks. We conduct thorough code reviews, utilize industry-standard security protocols, and regularly update our systems to ensure your smart contract remains secure.<br><br>
+                    <b class="end" style="font-size: 17px;">Trust us to help you navigate the complex world of smart contract security and keep your assets safe.</b></p>
                 </div>
             </div>
             <div class="lopp carousel__item" >
                 <div class="content-1">
-                    <h2 class="title">Penetration Testing</h2>
+                    <h2 class="title">Penetration Testing: The Key to Securing Your Infrastructure</h2>
                     <p class="text">
-                    At Fortress Boxes, we are dedicated to ensure the security and compliance of your organization's IT environment with our comprehensive assessment services.<br>
-                    Our team of experts will review your IT configuration, policies, processes, and procedures related to your business, and conduct a thorough penetration testing of your system to identify vulnerabilities.<br><br>
-
-                    <b class="end" style="font-size: 17px;">Trust us to keep your IT environment secure - contact us today to schedule your assessment.</b>
+                        Penetration testing is a critical component of a comprehensive security strategy.<br>
+                        Our skilled professionals provide customized testing services to identify weaknesses in your systems, applications, and networks. We simulate real-world attacks and provide actionable recommendations to improve your security posture using the latest tools and techniques. Protect your sensitive data and assets from potential threats with our expert guidance.<br><br>
+                    <b class="end" style="font-size: 17px;">Trust us to keep your IT environment secure, contact us to schedule your assessment.</b>
                     </p>
                 </div>
                 <div class="pic-1">
@@ -83,14 +80,10 @@
                     <img class="pic-1-content" src="./image/webdev.svg" alt="FortressBoxes Web Developement">
                 </div>
                 <div class="content-1">
-                    <h2 class="title">Web Development</h2>
+                    <h2 class="title">Secure Web Development for Your Business</h2>
                     <p class="text">
-                        If you're planning to create a website or web application, you'll need a team of skilled developers who can bring your vision to life.<br> 
-                        We stay up-to-date to ensure that your web application is secure, efficient, and optimized for performance.<br>
-                        We offer end-to-end web development services that include design, development, testing, deployment, and maintenance.<br>
-                        Our team will work closely with you to understand your business requirements and create a web solution tailored to your needs.
-                        Count on us to help you build a web application that provides a seamless user experience while ensuring scalability and security.<br><br>
-
+                        FortressBoxes specializes in secure web development to protect businesses' sensitive data and assets. <br>
+                        Our experienced developers follow industry best practices, using the latest security technologies and frameworks to prevent attacks and vulnerabilities. Trust us to build a functional and secure website from the ground up.<br><br>
                         <b class="end" style="font-size: 17px;">Get in touch with us today to discuss your web development project.</b>
                     </p>
                 </div>
@@ -106,9 +99,40 @@
         <button class="carousel__button carousel__button--right"><img class="raw" src="./image/next.svg"></button>
     </div>
     <!-- Carousel End -->
-    <div class="">
-
+    <!-- services start -->
+    <div>
+        <h1 style="text-align: center;margin-bottom: 10px;color: rgb(2 167 245);">Our Services</h1>
+        <div class="card_cont">
+            <div class="card">
+                <img class="card_pic" src="./image/pentest_card.svg" alt="Penetration testing service">
+                <div class="card_title">
+                    <h4>Penetration Testing</h4>
+                </div>
+                <div class="card_text">
+                    <p>bonjour tout le monde</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card_pic" src="./image/pentest_card.svg" alt="Penetration testing service">
+                <div class="card_title">
+                    <h4>Penetration Testing</h4>
+                </div>
+                <div class="card_text">
+                    <p>bonjour tout le monde</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card_pic" src="./image/pentest_card.svg" alt="Penetration testing service">
+                <div class="card_title">
+                    <h4>Penetration Testing</h4>
+                </div>
+                <div class="card_text">
+                    <p>bonjour tout le monde</p>
+                </div>
+            </div>
+        </div>
     </div>
+    <!-- services end -->
     <script type="text/javascript" src="./script/carouselle.js"></script>
     <script type="text/javascript" src="./script/menu.js"></script> 
 </body>
