--- a/index.html
+++ b/index.html
@@ -133,6 +133,40 @@
         </div>
     </div>
     <!-- services end -->
+    <!-- footer start -->
+    <link href="./style/footer.css" rel="stylesheet" type="text/css">
+    <div class="footer">
+        <div class="footer-wrapper">
+            <a href="./index.php" class="footer-brand inline-block"><img src="./image/logo2.svg" loading="lazy" width="100" alt="FortressBoxes Logo" class="footer-logo"/></a>
+            <div class="footer-content">
+                <div class="footer-block">
+                    <div class="title-small">Company</div>
+                    <a href="" class="footer-link">About Us</a>
+                    <a href="" class="footer-link">Pricing</a>
+                    <a href="" class="footer-link">Join Us</a>
+                </div>
+                <div class="footer-block">
+                    <div class="title-small">Resources</div>
+                    <a href="" class="footer-link">Blockchain</a>
+                    <a href="" class="footer-link">Penetration Test</a>
+                    <a href="" class="footer-link">Ctf challenge creator</a>
+                </div>
+                <div class="footer-block">
+                    <div class="title-small">About</div>
+                    <a href="" class="footer-link">Terms &amp; Conditions</a>
+                    <a href="" class="footer-link">Privacy policy</a>
+                    <div class="footer-social-block">
+                        <a href="https://twitter.com/fortressboxes" class="footer-social-link-twitter inline-block"><img src="./image/twitter.svg" loading="lazy" alt="FortressBoxes twitter" width="24" height="24"/></a>
+                        <a href="https://www.linkedin.com/company/fortressboxes/" class="footer-social-link-linkedin inline-block"><img src="./image/linkedin.png" loading="lazy" alt="fortressboxes linkedin"  height="24"/></a>
+                        <a href="https://www.instagram.com/fortressboxes/" class="footer-social-link-facebook inline-block"><img src="./image/instagram.png" loading="lazy" alt="FortressBoxes instagram" height="24"/></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-divider"></div>
+        <div class="footer-copyright-center">Copyright © 2023 FortressBoxes</div>
+    </div>
+    <!-- footer end -->
     <script type="text/javascript" src="./script/carouselle.js"></script>
     <script type="text/javascript" src="./script/menu.js"></script> 
 </body>
