--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                     <h4>Penetration Testing</h4>
                 </div>
                 <div class="card_text">
-                    <p>bonjour tout le monde</p>
+                    <p >Expert cybersecurity testing. <br>Identify vulnerabilities. <br>Protect from cyber attacks.</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card_pic" src="./image/pentest_card.svg" alt="Penetration testing service">
                 <div class="card_title">
-                    <h4>Penetration Testing</h4>
+                    <h4>Web Development</h4>
                 </div>
                 <div class="card_text">
                     <p>bonjour tout le monde</p>
@@ -124,7 +124,7 @@
             <div class="card">
                 <img class="card_pic" src="./image/pentest_card.svg" alt="Penetration testing service">
                 <div class="card_title">
-                    <h4>Penetration Testing</h4>
+                    <h4>Blockchain Audit</h4>
                 </div>
                 <div class="card_text">
                     <p>bonjour tout le monde</p>
@@ -155,6 +155,24 @@
                     <div class="title-small">About</div>
                     <a href="" class="footer-link">Terms &amp; Conditions</a>
                     <a href="" class="footer-link">Privacy policy</a>
+                    <div class="footer-social-block">
+                        <a href="https://twitter.com/fortressboxes" class="footer-social-link-twitter inline-block"><img src="./image/twitter.svg" loading="lazy" alt="FortressBoxes twitter" width="24" height="24"/></a>
+                        <a href="https://www.linkedin.com/company/fortressboxes/" class="footer-social-link-linkedin inline-block"><img src="./image/linkedin.png" loading="lazy" alt="fortressboxes linkedin"  height="24"/></a>
+                        <a href="https://www.instagram.com/fortressboxes/" class="footer-social-link-facebook inline-block"><img src="./image/instagram.png" loading="lazy" alt="FortressBoxes instagram" height="24"/></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content2">
+                <div class="footer-block2">
+                    <div class="title-small">About</div>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Blockchain</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Penetration Test</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Ctf challenge creator</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">About Us</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Pricing</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Join Us</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Terms &amp; Conditions</a>
+                    <a href="" class="footer-link" style="font-size:14px !important;">Privacy policy</a>
                     <div class="footer-social-block">
                         <a href="https://twitter.com/fortressboxes" class="footer-social-link-twitter inline-block"><img src="./image/twitter.svg" loading="lazy" alt="FortressBoxes twitter" width="24" height="24"/></a>
                         <a href="https://www.linkedin.com/company/fortressboxes/" class="footer-social-link-linkedin inline-block"><img src="./image/linkedin.png" loading="lazy" alt="fortressboxes linkedin"  height="24"/></a>
