--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <link href="./style/footer.css" rel="stylesheet" type="text/css">
     <div class="footer">
         <div class="footer-wrapper">
-            <a href="./index.php" class="footer-brand inline-block"><img src="./image/logo2.svg" loading="lazy" width="100" alt="FortressBoxes Logo" class="footer-logo"/></a>
+            <a href="./index.html" class="footer-brand inline-block"><img src="./image/logo2.svg" loading="lazy" width="100" alt="FortressBoxes Logo" class="footer-logo"/></a>
             <div class="footer-content">
                 <div class="footer-block">
                     <div class="title-small">Company</div>
