--- a/index.html
+++ b/index.html
@@ -133,6 +133,50 @@
         </div>
     </div>
     <!-- services end -->
+    <!-- contact us form start -->
+    <div class="container">
+        <div class="content">
+            <div class="left-side">
+                <div class="address details">
+                    <i style="padding: 2px;"><img src="./image/address.svg" width="60px"></i> <!-- image -->
+                    <div class="topic">Address</div>
+                    <div class="text-one">Marrakech</div>
+                    <div class="text-two">Morocco</div>
+                </div>
+                <div class="phone details">
+                    <i style="padding: 2px;"><img src="./image/phone.svg" width="60px"></i> <!-- image -->
+                    <div class="topic">Phone</div>
+                    <div class="text-one">+212 693370585</div>
+                    <div class="text-two">+212 </div>
+                </div>
+                <div class="email details">
+                    <i style="padding: 2px;"><img src="./image/mail.svg" width="60px"></i> <!-- image -->
+                    <div class="topic">Email</div>
+                    <div class="text-one">contact@fortressboxes.tech</div>
+                    <div class="text-two">mohamed.moualim@fortressboxes.tech</div>
+                </div>
+            </div>
+            <div class="right-side">
+                <div class="topic-text">Send us a message</div>
+                <p style="color:white;">Fill out the form below and our team will reach out you soon.</p>
+                <form action="" method="post">
+                    <div class="input-box">
+                        <input type="text" placeholder="Your name" required>
+                    </div>
+                    <div class="input-box">
+                        <input type="email" placeholder="Your email" required>
+                    </div>
+                    <div class="input-box message-box">
+                        <textarea type="text" placeholder="Enter Description" required></textarea>
+                    </div>
+                    <div class="button">
+                        <input type="submit" value="Send Now" >
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- contact us form end -->
     <!-- footer start -->
     <link href="./style/footer.css" rel="stylesheet" type="text/css">
     <div class="footer">
